# yunspire

./: .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  windows-installer.yml
desktop-ui/: app.js  index.html  styles.css
scripts/: build-windows-media-helper.mjs  build-windows-native.mjs  build-windows-python-runtime.mjs
skills/beautify-markdown/: SKILL.md  input.schema.json  manifest.json  origin.json  output.schema.json
skills/beautify-markdown/scripts/: beautify-markdown.mjs
skills/document-content-analysis/: SKILL.md  origin.json
skills/document-content-analysis/scripts/: external_image_localizer.py  extract_document.py  ooxml_excel.py  ooxml_ppt.py  ooxml_word.py  yunspire_image_windows.cpp  yunspire_pdf.m  yunspire_pdf_windows.cpp
skills/video-content-analysis/: SKILL.md  origin.json
skills/video-content-analysis/scripts/: extract_video.py  media_discovery.py  yunspire_media.m  yunspire_media_windows.cpp  yunspire_speech.m  yunspire_speech_info.plist  yunspire_speech_windows.cpp  (+1 more)
skills/web-content-analysis/: SKILL.md  origin.json
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture_pipeline.rs  command_bus.rs  connectors.rs  lib.rs  main.rs  model_config.rs  model_provider.rs  obsidian.rs  obsidian_management.rs  policy.rs  runtime_db.rs  scheduler.rs  task_runtime.rs  updater.rs  vault_watcher.rs
(+1 files in other folders)
