[package]
name = "yunspire"
version = "0.1.0"
description = "Yunspire local Obsidian agent desktop"
authors = ["leochang <leochang210@gmail.com>"]
license-file = "../LICENSE"
repository = "https://github.com/Leo-sail/yunspire.git"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yunspire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
base64 = "0.22"
notify = "8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["time", "macros"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
sha2 = "0.10"
similar = "2.6"
tempfile = "3.12"
uuid = { version = "1.10", features = ["v4"] }
aes-gcm = "0.10"
